trepo core bump

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   "dependencies": {
     "@treehub/level": "0.3.0",
     "graphql": "0.9.6",
-    "trepo-core": "0.4.1"
+    "@trepo/core": "0.5.0"
   }
 }
